dump_fixtures. 


Migration generator

  Fixed indentation bug in generated code.

  Now prompts for the name of the generated migration after the
  generated code is displayed.

  Better error message for invlaid field types declared in models.


Tabla theme

  Fixed reference to non-existent human_type helper.


Hobo users

  Various fixes to the new (in 0.6.1) multiple user model support.

  The filter "login_required" can now be passed a user model (class),
  e.g.

    before_filter {|controller| controller.login_required(Administrator) }



  The named routes "login", "logout" and "signup" are no longer
  defined. Instead there are helpers login_url, signup_url and
  logout_url, all of which are passed a user model (class) as
  parameter.

  New declaration 'hobo_user_model' can be used in place of hobo_model
  and removes the need to include Hobo::AuthenticatedUser. Can be
  passed the name of the login field, which removes the need to call
  set_login_attr. Can also be passed a block in which to do
  validations of the login attr (just as you can with set_login_attr).

  Guest model should now extend Hobo::Guest, which provides #guest
  (true!) and #super_user (false)

  User models now inherit #guest? (returns false). No need to define
  it yourself.


Hobo models

  Optimisation. Where possible we've replaced calls to #respond_to?
  (which is slow on AR records) with the new class method
  #has_hobo_method? which is an alias for
  #respond_to_without_attributes?

  "fields do" now supports shorthands for common validations
  validates_uniqueness_of and validates_presence_of, e.g.:

    fields do
      name :string, :required, :unique
    end

    If you need to change the validation method, just go back to the
    old way.

  The creator attribute mechanism is updated to cope with multiple
  user models. Hobo will not try to set the creator attribute if the
  expected type is not the same as the type of the logged in user.
