@@ -1,7 +1,9 @@
 <def tag="with_fields" attrs="fields, skip, skip_associations, include_timestamps"><%
-  field_names = if fields.nil?
-                  columns = this.class.content_columns.every(:name)
-                  columns -= %w{created_at updated_at created_on updated_on} unless include_timestamps
+  field_names = if fields.nil? || fields == "*" || fields.is_a?(Class)
+                  klass = fields.is_a?(Class) ? fields : this.class
+                  columns = klass.content_columns.every(:name)
+                  columns -= %w{created_at updated_at created_on updated_on} unless
+                    include_timestamps
 
                   if skip_associations == "has_many"
                     assocs = this.class.reflections.values.reject {|r| r.macro == :has_many }.every(:name)
@@ -9,7 +11,7 @@
                   elsif skip_associations
                     columns
                   else
-                    assocs = this.class.reflections.values.every(:name)
+                    assocs = klass.reflections.values.every(:name)
                     columns + assocs
                   end
                 else
@@ -22,8 +24,9 @@
 %></def>
 
 <def tag="with_field_names" attrs="fields, skip, skip_associations, include_timestamps"><%=
-  field_names = if fields.nil?
-                  columns = this.content_columns.every(:name)
+  field_names = if fields.nil? || fields == "*" || fields.is_a?(Class)
+                  klass = fields.is_a?(Class) ? fields : this.proxy_reflectin.class
+                  columns = klass.content_columns.every(:name)
                   columns -= %w{created_at updated_at created_on updated_on} unless include_timestamps
 
                   if skip_associations == "has_many"
@@ -32,7 +35,7 @@
                   elsif skip_associations
                     columns
                   else
-                    assocs = this.reflections.values.every(:name)
+                    assocs = klass.reflections.values.every(:name)
                     columns + assocs
                   end
                 else
@@ -42,7 +45,7 @@
   field_names -= comma_split(skip) if skip
   scope.new_scope do
     field_names.map do |n|
-      scope.field_name = n.gsub("." , "_")
+      scope.field_name = n.to_s.gsub("." , "_")
       scope.field_path = n
       tagbody.call
     end
